# gtk-file-explorer

./: CMakeLists.txt  File.h  FileEntry.cpp  FileEntry.h  FileManager.cpp  FileManager.h  FilesSpace.cpp  FilesSpace.h  FilespaceContextMenu.cpp  FilespaceContextMenu.h  MyWindow.cpp  MyWindow.h  TopPanel.cpp  TopPanel.h  main.cpp
